Fix incompatible-packages having too dark text

--- a/styles/core.less
+++ b/styles/core.less
@@ -6,8 +6,14 @@
   opacity: .6;
 }
 
+.tool-panel.incompatible-packages {
+  // incompatible-packages isn't really a tool-panel and more a whole pane
+  .text(normal);
+  background-color: @level-2-color;
+}
 
-// Styleguide
+
+// Styleguide ----------------------------------------------
 
 .styleguide section.bordered,
 .styleguide section.collapsed {
